<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yamba</string>
    <string name="titleYamba">Yamba</string>
    <string name="titleStatus">Status Update</string>
    <string name="hintText">Please enter your 140-character status</string>
    <string name="buttonUpdate">Post</string>

    <string name="titlePrefs">Prefs</string>
    <string name="titleServiceStart">Start Service</string>
    <string name="titleServiceStop">Stop Service</string>

    <string name="titleUsername">Username</string>
    <string name="summaryUsername">Please enter your username</string>
    <string name="titlePassword">Password</string>
    <string name="summaryPassword">Please enter your password</string>
    <string name="titleApiRoot">API Root URL</string>
    <string name="summaryApiRoot">The URL of your server</string>
    <string name="titleProvider">Location Provider</string>
    <string name="summaryProvider">Whether and how to keep track of location</string>
    <string name="titleUpdaterInterval">Update Frequency</string>
    <string name="summaryUpdaterInterval">How often to fetch updates</string>

    <string name="titleTimeline">Timeline</string>
    <string name="msgSetupPrefs">Please set your preferences</string>

    <string name="send_timeline_notifications_permission_label">Send Timeline Notifications</string>
    <string name="send_timeline_notifications_permission_description">Used to send timeline data to other activities.</string>
    <string name="receive_timeline_notifications_permission_label">Receive Timeline Notifications</string>
    <string name="receive_timeline_notifications_permission_description">Used to receive timeline data from other activities.</string>

    <string name="msgLastTimelineUpdate">Last Status Update</string>

    <string-array name="providers">
      <item>None, please</item>
      <item>GPS via satellites</item>
      <item>Mobile Network will do</item>
    </string-array>

    <string-array name="providerValues">
      <item>NONE</item>
      <item>gps</item>
      <item>network</item>
    </string-array>
    <string-array name="interval">
      <item>No updates</item>
      <item>Every minute</item>
      <item>Every hour</item>
    </string-array>

    <string-array name="intervalValues">
      <item>NONE</item>
      <item>60</item>
      <item>3600</item>
    </string-array>
</resources>
