<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <EditTextPreference android:title="@string/titleUsername"
                      android:summary="@string/summaryUsername"
                      android:key="username"></EditTextPreference>

  <EditTextPreference android:title="@string/titlePassword"
                      android:summary="@string/summaryPassword"
                      android:password="true"
                      android:key="password"></EditTextPreference>

  <EditTextPreference android:title="@string/titleApiRoot"
                      android:summary="@string/summaryApiRoot"
                      android:key="apiRoot"></EditTextPreference>

  <ListPreference android:title="@string/titleProvider"
                  android:summary="@string/summaryProvider"
                  android:key="provider"
                  android:entries="@array/providers"
                  android:entryValues="@array/providerValues"></ListPreference>

  <ListPreference android:title="@string/titleUpdaterInterval"
                  android:summary="@string/summaryUpdaterInterval"
                  android:key="interval"
                  android:entries="@array/interval"
                  android:entryValues="@array/intervalValues"></ListPreference>

</PreferenceScreen>
